# xeus-fift

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  func_cheat_sheet.ipynb
scripts/: gen_docstring_hpp.py  gen_kernel_js.py  xfift_docstring_hpp.py  xfift_version.sh
share/jupyter/kernels/fift/: kernel.js  kernel.js.in  kernel.json.in
share/jupyter/kernels/func/: kernel.js  kernel.json.in
src/: docstring.hpp  fift_interpreter.cpp  fift_interpreter.hpp  helpers.hpp  main.cpp  str_helpers.hpp  version.h  xfift.cpp  xfift.hpp  xinterpreter.cpp  xinterpreter.hpp  xresult.cpp  xutil.cpp  xutil.hpp
src/xfift/: docstring.hpp.in  main.cpp  xfift.cpp  xfift.hpp  xinterpreter.cpp
src/xfunc/: codegen.cpp  preproc.cpp  symdef.cpp  symguard.cpp  xfunc.cpp  xfunc.hpp
test/: main.cpp  requirements.txt  test_fift_kernel.py  test_xfift.cpp  test_xfunc.cpp
